# novel-langchain

./: .gitignore  main.py  novel.py  prompt.txt  pyproject.toml  serve.py
