[project]
name = "learn-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.3",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.2",
    "numpy>=2.2.6",
    "openai>=2.6.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "unstructured>=0.18.15",
]
